making aesthetic changes to w22

--- a/week22.html
+++ b/week22.html
@@ -38,7 +38,7 @@
 
 
 <span class="image fit" style="margin-bottom: 0px;"><img src="images/w22_nyc_amin_pano.jpg" alt="" /></span>
-
+<br><br>
 <header><h4><b>We went to NYC!</b></h4></header>
 
 <p>We had the great fortune to take the whole team to Mastercard’s Digital Payments and Labs office in the Flatiron neighborhood of New York City! This was a terrific chance for us to get expert feedback and interviews with internal people at Mastercard, get specific feedback on prototypes, and discuss the most valuable problems to work on for the last 6 weeks of the project.<p>
@@ -46,7 +46,7 @@
 <p>Moreover, we would get a chance to see exactly how the user experience team operates, and what their core values are, allowing us to develop a product, or products, that Mastercard will find real value in. This visit to NYC also allowed us to better formalize a go-to-market strategy, which our clients have explicitly asked from us.</p>
 
 <span class="image fit" style="margin-bottom: 0px;"><img src="images/w22_nyc_designerslunch.jpg" alt="" /></span>
-
+<br><br>
 
 <header><h4><b>What we presented in NYC</b></h4></header>
 
@@ -61,6 +61,7 @@
 	<li>Physical Checkout</li>
 </ul>
 
+<br><br>
 <iframe class="image fit" src="//www.slideshare.net/slideshow/embed_code/key/mYXM589TJ94iAc" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ScottLeinweber/mastercard-cmu-capstone-midsummer-presentation" title="Mastercard CMU Capstone Midsummer Presentation" target="_blank">Mastercard CMU Capstone Midsummer Presentation - June 21 </a> </strong> </div>
 
 
@@ -70,15 +71,15 @@
 
 <span class="image fit" style="margin-bottom: 0px;"><img src="images/w22_nyc_posterpres.jpg" alt="" /></span>
 
-
+<br><br>
 <header><h4><b>Direction and Deliverables for 6 weeks</b></h4></header>
 
 <p>We proposed in NYC a set of three deliverables:</p>
-<ul>
-	<li>(1) an onboarding experience via a bank app</li>
-	<li>(2) merchant examples of flows for digital omni-channel checkouts, and</li>
-	<li>(3) a short set of UX guidelines based on our research and findings of consumer perceptions and issues.</li>
-</ul>
+<ol>
+	<li>An onboarding experience via a bank app</li>
+	<li>Merchant examples of flows for digital omni-channel checkouts, and</li>
+	<li>A short set of UX guidelines based on our research and findings of consumer perceptions and issues.</li>
+</ol>
 
 <p>Feedback from experts here prompted us to consider some new facets that could be valuable for Mastercard. The different markets will require quite different approaches. The EU could be the most fastidious and conservative consent requirement, while China and possibly the US could be entirely unregulated. We learned about a bunch of specific technologies and governing standards to look at - EMV 2.0 and 3DSecure both seem to have prior art we can leverage in messaging and design. And design - both a UX researcher and content strategist joined the session and had great ideas and suggested we try a diary study as well as a journey map for various levels of authentication.</p>
 
@@ -88,7 +89,7 @@
 <header><h4><b>Team Member Highlights!</b></h4></header>
 
 <span class="image fit" style="margin-bottom: 0px;"><img src="images/w22_nyc_skyline.jpg" alt="" /></span>
-
+<br><br>
 <strong>Grace Guo</strong>
 
 <p>It was a really fruitful trip for us. Sharing our ideas with people from different teams, we were exposed to a number of real-world challenges our prototypes might face. GDPR and data privacy, cross environment feasibility, and many other challenges toward implementing continuous authentication were thought-provoking for us. It was also motivating to learn that our clients found our chosen topic highly relevant to what they do, and even one step further into the future. Besides work, we had a lot of fun in Koreatown!</p>
@@ -112,8 +113,10 @@ Every meeting had its own flavor. For example, I learned a lot of colorful langu
 <p>What stood out for me as soon as we entered the office was how Mastercard looked so much like a “trendy tech company”. Despite being the giant organization that it is, the floor had a bunch of prototypes ranging from a digital mirror to a cardless rickshaw. In one of our meetings, Karen touched upon this too. How Mastercard has been undergoing a change and how the company has been focussing on technology and design especially over the past 4 years. It was great talking to so many people from different verticals, and having discussions with them from all their different viewpoints. Talking to Erica was particularly insightful because she had worked on Masterpass and encountered a lot of the problems we have been trying to tackle. It’s going to be really interesting to consolidate all the notes we collected from these interviews and use it to inform the next stages of our project.</p>
 
 <p>Also New York is AMAZING! Where else in the world can you find panda cotton candy?</p>
-<span class="image fit" style="margin-bottom: 0px;"><img src="images/pandacandy.png" alt="" /></span>
+<span class="image fit" style="margin-bottom: 0px;"><img src="images/pandacandy.png" style="width:40%;" alt="" /></span>
 
+
+<br><br>
 <strong>Xueting Zhang</strong>
 
 <p>I’m really excited to see what we are working on aligns with Mastercard’s core value. Everyone we talked to - designers, product managers or engineers were all interested in the topic and brought their unique perspective to the table. It really helped to confirm some of our early assumptions and informed us about constraints. And though it was such a short time, I really enjoyed being in New York. It is a city with a diverse and inspiring culture. And of course, a lot of good food!</p>
