adds w26 link to blog page and w26 image, video

--- a/blog.html
+++ b/blog.html
@@ -273,7 +273,7 @@
 						</div>
 					</section>
 
-					<!-- Twentytwo -->
+					<!-- Twentyfour -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Weeknotes 24 - Diary Study Rollout</h2>
@@ -286,6 +286,23 @@
 							<img src="images/w24_diary_schedule.png" alt="" />
 						</div>
 					</section>
+
+					<!-- Twentyfive twentysix -->
+<!-- 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 25/26 - Sprint 8 - Diary Study Analysis</h2>
+							<p>We're getting towards the end! Over these two weeks, we've administered the diary study, jumped into a huge analysis process, and are working towards solidfying our findings into a UX Guidelines website for Mastercard designers.</p>
+							<ul class="actions vertical">
+								<li><a href="week26.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/w26_diary_affinity_timelapse.png" alt=""/>
+						</div>
+					</section> -->
+
+
+
 
 
 
