--- a/week26.html
+++ b/week26.html
@@ -56,101 +56,106 @@
 			<h4>Narrative and reasoning of each daily prototype:</h4>
 
 			<h3>Day 1, Bed Bath & Beyond:</h3>
-			https://mysterious-wave-18544.herokuapp.com/BBB.php?uid=01
+			<a href="https://mysterious-wave-18544.herokuapp.com/BBB.php?uid=01">Day 1</a>
 
 			<h3>Day 2, Whole Foods:
-			https://mysterious-wave-18544.herokuapp.com/wf.php?uid=01
+			<a href="https://mysterious-wave-18544.herokuapp.com/wf.php?uid=01">Day 2</a>
 
 			<h3>Day 3, Walmart:
-			https://mysterious-wave-18544.herokuapp.com/wm1.php?uid=01
+			<a href="https://mysterious-wave-18544.herokuapp.com/wm1.php?uid=01">Day 3</a>
 
 
 			<p>On the fourth day, every track experiences the first “autofill” day (simulating using Continuous Authentication for the first time). This is where it starts to differentiate between tracks.</p>
 
-			<h3>Day 4, H&M:
+			<h3>Day 4, H&M:</h3>
 
 			<b>Track A - Autofilled, no explanation:</b>
-			<p>These users are never told what is going on. No mention of any change to their authentication flow, them being enrolled in any new program, or changes to the payment process whatsoever.
-			Our hypothesis with them is that, potentially in non-EU markets, this data collection could be feasible, but customers may be sketched out when it autofills without explanation. This rang true and people were weirded out by it autofilling on day 4.
+			<p>These users are never told what is going on. No mention of any change to their authentication flow, them being enrolled in any new program, or changes to the payment process whatsoever.</p>
+			<p>Our hypothesis with them is that, potentially in non-EU markets, this data collection could be feasible, but customers may be sketched out when it autofills without explanation. This rang true and people were weirded out by it autofilling on day 4.</p>
+			<a href="https://mysterious-wave-18544.herokuapp.com/hm.php?uid=07">Day 4 - Track A</a>
 
-			https://mysterious-wave-18544.herokuapp.com/hm.php?uid=07
 
-			<p>Track B - NOT Autofilled, Opt-in:
-			<p>These users are politely asked if they would like to opt in to a service, Mastercard Instant Checkout, that pre fills in their data. Their data on Day 4 is NOT prefilled (the only track it’s not) and they must opt-in via a pop-up bubble. It is more convenient and secure. In the post interview no one could remember if they opted in or not, and regardless, we autofilled their data anyway. These users did mention the Mastercard branding and checkmarks we added, and “encrypted” text as reassuring.
+			<b>Track B - NOT Autofilled, Opt-in:</b>
+			<p>These users are politely asked if they would like to opt in to a service, Mastercard Instant Checkout, that pre fills in their data. Their data on Day 4 is NOT prefilled (the only track it’s not) and they must opt-in via a pop-up bubble. It is more convenient and secure. In the post interview no one could remember if they opted in or not, and regardless, we autofilled their data anyway. These users did mention the Mastercard branding and checkmarks we added, and “encrypted” text as reassuring.<p>
 
-			https://mysterious-wave-18544.herokuapp.com/hm.php?uid=08
+			<a href="https://mysterious-wave-18544.herokuapp.com/hm.php?uid=08">Day 4 - Track B</a>
 
-			<p>Track C - Autofilled, opt-out:
-			<p>Track C users were very much like track B expect we assume they want it and opt them in from the start on day 4. Their info is prefilled and they can opt-out if they like. No one chose to opt-out, and this had the highest aggregate comfort score across the entire study.
+			<b>Track C - Autofilled, opt-out:</b>
+			<p>Track C users were very much like track B expect we assume they want it and opt them in from the start on day 4. Their info is prefilled and they can opt-out if they like. No one chose to opt-out, and this had the highest aggregate comfort score across the entire study.</p>
 
-			<p>https://mysterious-wave-18544.herokuapp.com/hm.php?uid=01
+			<a href="https://mysterious-wave-18544.herokuapp.com/hm.php?uid=01">Day 4 - Track C</a>
 
-			<p>Track D - Autofilled, with progress bar=100%:
+			<b>Track D - Autofilled, with progress bar=100%:</b>
 			<p>Unlike the previous three tracks, track D is fully aware of what Continuous Authentication is, and have been fully educated. For the first few days, their authentication profile was “learning” and there was a green progress bar that showed how complete it was. It became complete on day 3 and the use the autofill feature on day 4. However, we cannot say overall their comprehension of the system was any better than the other tracks, and in some cases worse. They had the most varied comfort, surprisingly, and had some notable misunderstandings of the progress bar.
 
-			<p>https://mysterious-wave-18544.herokuapp.com/hm.php?uid=18
+			<a href="https://mysterious-wave-18544.herokuapp.com/hm.php?uid=18">Day 4 - Track D</a>
 
 
 			<h3>Day 5, Bed, Bath, and Beyond:</h3>
 
-			<p>Plain Autofilled:
+			<b>Plain Autofilled:</b>
 			<p>For day 5, everyone gets the same checkout with the information autofilled.
 
-			https://mysterious-wave-18544.herokuapp.com/BBB.php?uid=15
+			<a href="https://mysterious-wave-18544.herokuapp.com/BBB.php?uid=15">Day 5</a>
 
 
 			<h3>Day 6, Whole Foods:</h3>
 
-			<p>First Step Up:
-			<p>This day they are buying an expensive camera on Walmart.com. Everyone gets some type of step-up, a prompt for further authentication. We tested various types of step ups from a standard email sent code, to more out-there experiments. Most people verbally said these made them feel more secure, like Mastercard was watching out for them, while paradoxically selecting lower numbers on the comfort scale. We think this is because some of the experimental step ups were not very robust on different devices and hard to use.
+			<p>First Step Up:</p>
+			<p>This day they are buying an expensive camera on Walmart.com. Everyone gets some type of step-up, a prompt for further authentication. We tested various types of step ups from a standard email sent code, to more out-there experiments. Most people verbally said these made them feel more secure, like Mastercard was watching out for them, while paradoxically selecting lower numbers on the comfort scale. We think this is because some of the experimental step ups were not very robust on different devices and hard to use.</p>
 
-			<p>https://mysterious-wave-18544.herokuapp.com/wm.php?uid=15
+			<a href="https://mysterious-wave-18544.herokuapp.com/wm.php?uid=15">Day 6</a>
 
 
 
 			<h3>Day 7, Whole Foods:</h3>
 
-			<p>Plain Autofill:
-			<p>Another plain day of autofilling.
+			<p>Plain Autofill:</p>
+			<p>Another plain day of autofilling.</p>
 
-			<p>https://mysterious-wave-18544.herokuapp.com/wf.php?uid=02
+			<a href="https://mysterious-wave-18544.herokuapp.com/wf.php?uid=02">Day 7</a>
 
 			<h3>Day 8, H&M:</h3>
 
-			<p>Second Step Up:
-			<p>We tested another type of step up with everyone, albeit on a cheaper item around $25.
+			<p>Second Step Up:</p>
+			<p>We tested another type of step up with everyone, albeit on a cheaper item around $25.</p>
 
-			<p>https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=06
+			<a href="https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=06">Day 8</a>
 
+			<hr>
+			<br>
 
-			____________________________________________________________________________
+			<h3>Examples of Tested Step Ups</h3>
 
-			<p>Examples of Tested Step Ups
+			<p>Email Pincode - This is the most typical step up of the bunch and currently used today, where a pincode or link is sent to the user via text or email.</p>
 
-			<p>Email Pincode - This is the most typical step up of the bunch and currently used today, where a pincode or link is sent to the user via text or email.
+			https://mysterious-wave-18544.herokuapp.com/wm.php?uid=12
+			<a href="https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=06">Day 8</a>
 
-			<p>https://mysterious-wave-18544.herokuapp.com/wm.php?uid=12
+			<p>Circle the Donut - Users with this step up identified “their” donut out of an array of 6 donuts. When prompted with the array, they had to select their predetermined donut. This is playing off a Microsoft interaction called Picture Password.</p>
 
-			<p>Circle the Donut - Users with this step up identified “their” donut out of an array of 6 donuts. When prompted with the array, they had to select their predetermined donut. This is playing off a Microsoft interaction called Picture Password.
+			https://mysterious-wave-18544.herokuapp.com/wm.php?uid=05
+			<a href="https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=06">Day 8</a>
 
-			<p>https://mysterious-wave-18544.herokuapp.com/wm.php?uid=05
-
-			<p>Draw a Star - Using mouse or touchscreen input as a unique factor, users are prompted to draw a star in a canvas box. <p>Some academic research shows drawing like this could be used as a unique identifying factor.
-
-
-			<p>https://mysterious-wave-18544.herokuapp.com/wm.php?uid=08
-
-			<p>Swipe through Gallery - To test “browsing behaviour” in a step up, this shows a gallery of images and ask users to swipe through them to browse. We realized too late some functional compatibility issues between mobile and desktop without
+			<p>Draw a Star - Using mouse or touchscreen input as a unique factor, users are prompted to draw a star in a canvas box. </p><p>Some academic research shows drawing like this could be used as a unique identifying factor.</p>
 
 
-			<p>https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=04
+			https://mysterious-wave-18544.herokuapp.com/wm.php?uid=08
+			<a href="https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=06">Day 8</a>
 
 
-			<p>Link to the nightly survey, sent out daily, after participants complete the checkout process:
+			<p>Swipe through Gallery - To test “browsing behaviour” in a step up, this shows a gallery of images and ask users to swipe through them to browse. We realized too late some functional compatibility issues between mobile and desktop without</p>
 
-			https://docs.google.com/forms/d/e/1FAIpQLSceBhi4F2dCNGVDoYTFt3ZZkASaG8F3z9CaRXAQPRUxLjq0Tg/viewform
 
-			<h3>Analysis process
+			https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=04
+			<a href="https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=06">Day 8</a>
+
+
+			<p>Link to the nightly survey, sent out daily, after participants complete the checkout process:</p>
+
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSceBhi4F2dCNGVDoYTFt3ZZkASaG8F3z9CaRXAQPRUxLjq0Tg/viewform">Daily Survey</a>
+
+			<h3>Analysis process</h3>
 
 			<p>With 20 participants, pre and post interviews, as well as the daily survey response feedback, we had tons and tons of data to sift through. The post interviews are where most of the meat came from, and we embarked on another large affinity diagram process, across tracks and days.</p>
 
