adds w26 to blg.html, custom css too

--- a/blog.html
+++ b/blog.html
@@ -288,7 +288,7 @@
 					</section>
 
 					<!-- Twentyfive twentysix -->
-<!-- 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Weeknotes 25/26 - Sprint 8 - Diary Study Analysis</h2>
 							<p>We're getting towards the end! Over these two weeks, we've administered the diary study, jumped into a huge analysis process, and are working towards solidfying our findings into a UX Guidelines website for Mastercard designers.</p>
@@ -297,9 +297,9 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/w26_diary_affinity_timelapse.png" alt=""/>
+							<img src="images/w26_diary_affinity_timelapse.jpg" alt=""/>
 						</div>
-					</section> -->
+					</section>
 
 
 
