--- a/week26.html
+++ b/week26.html
@@ -37,8 +37,8 @@
 							<div class="content">
 
 
-			<span class="image fit" style="margin-bottom: 0px;"><img src="images/w24_diary_schedule.png" alt="" /></span>
-			</br>
+			<span class="image fit" style="margin-bottom: 0px;"><img src="images/w26_diary_affinity_timelapse.jpg" alt="" /></span>
+			<br>
 			<p>These past two week saw our broadest and longest user study to-date. This post covers the wrap up of it, analyzing the results, and nailing down the final presentation and deliverables for July 31st!</p>
 
 			<p><strong>Diary Study</strong> - We had 20 study participants over 4 different tracks. Each one visited a new website daily to use a variety of checkout flows. The 8-10 day study wrapped up last week and we had post-interviews over the two weeks. This week we have been analyzing the results, from qualitative to quantitative, and distilling the insights that will go into the UX Guidelines we plan to deliver to the client.</p>
@@ -57,16 +57,16 @@
 
 			<p>The first three days were simplified checkouts where the user was expected to type in their provided credit card details by hand. This was designed to get users into the vein of the test without trying to test variables right away.</p>
 
-			<h3>Day 1, Bed Bath & Beyond: <a href="https://mysterious-wave-18544.herokuapp.com/BBB.php?uid=01"> &#8594 Live Prototype Here</a></h3>
+			<h3>Day 1, Bed Bath & Beyond:</h3>
+			<p>Simple checkout on Bed Bath & Beyond<strong><a href="https://mysterious-wave-18544.herokuapp.com/BBB.php?uid=01"> &#8594 Live Prototype Here</a></strong></p>
 
 
-			<h3>Day 2, Whole Foods: <a href="https://mysterious-wave-18544.herokuapp.com/wf.php?uid=01"> &#8594 Live Prototype Here</a></h3>
+			<h3>Day 2, Whole Foods:</h3>
+			<p>Simple checkout on Whole Foods<strong><a href="https://mysterious-wave-18544.herokuapp.com/wf.php?uid=01"> &#8594 Live Prototype Here</a></strong></p>
 
 
-			<h3>Day 3, Walmart: <a href="https://mysterious-wave-18544.herokuapp.com/wm1.php?uid=01"> &#8594 Live Prototype Here</a></h3>
-
-			</br>
-			</br>
+			<h3>Day 3, Walmart:</h3>
+			<p>Simple checkout on Walmart<strong><a href="https://mysterious-wave-18544.herokuapp.com/wm1.php?uid=01"> &#8594 Live Prototype Here</a></strong></p>
 
 			<h3>Day 4, H&M:</h3>
 
@@ -117,69 +117,66 @@
 			<hr>
 			<br>
 
-			<h3>Examples of Tested Step Ups</h3>
-
-			<p>Email Pincode - This is the most typical step up of the bunch and currently used today, where a pincode or link is sent to the user via text or email.</p>
-
-			https://mysterious-wave-18544.herokuapp.com/wm.php?uid=12
-			<a href="https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=06">Day 8</a>
-
-			<p>Circle the Donut - Users with this step up identified “their” donut out of an array of 6 donuts. When prompted with the array, they had to select their predetermined donut. This is playing off a Microsoft interaction called Picture Password.</p>
-
-			https://mysterious-wave-18544.herokuapp.com/wm.php?uid=05
-			<a href="https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=06">Day 8</a>
-
-			<p>Draw a Star - Using mouse or touchscreen input as a unique factor, users are prompted to draw a star in a canvas box. </p><p>Some academic research shows drawing like this could be used as a unique identifying factor.</p>
 
 
-			https://mysterious-wave-18544.herokuapp.com/wm.php?uid=08
-			<a href="https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=06">Day 8</a>
 
 
-			<p>Swipe through Gallery - To test “browsing behaviour” in a step up, this shows a gallery of images and ask users to swipe through them to browse. We realized too late some functional compatibility issues between mobile and desktop without</p>
 
 
-			https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=04
-			<a href="https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=06">Day 8</a>
+
+			<h3>Tested Step-Up Examples</h3>
+
+			<strong>Email Pincode<a href="https://mysterious-wave-18544.herokuapp.com/wm.php?uid=12"
+			>&#8594 Live Prototype Here</a></strong>
+			<p>This is the most typical step up of the bunch and currently used today, where a pincode or link is sent to the user via text or email.</p>
+
+			<strong>Circle the Donut<a href="https://mysterious-wave-18544.herokuapp.com/wm.php?uid=05"
+			>&#8594 Live Prototype Here</a></strong>
+			<p>Users with this step up identified “their” donut out of an array of 6 donuts. When prompted with the array, they had to select their predetermined donut. This is playing off a Microsoft interaction called Picture Password.</p>
+
+			<strong>Draw a Star<a href="https://mysterious-wave-18544.herokuapp.com/wm.php?uid=08"
+			>&#8594 Live Prototype Here</a></strong>
+			<p>Using mouse or touchscreen input as a unique factor, users are prompted to draw a star in a canvas box. Some academic research shows drawing like this could be used as a unique identifying factor.</p>
+
+			<strong>Swipe through Gallery<a href="https://mysterious-wave-18544.herokuapp.com/hm2.php?uid=04"
+			>&#8594 Live Prototype Here</a></strong>
+			<p>To test “browsing behaviour” in a step up, this shows a gallery of images and ask users to swipe through them to browse. We realized too late some functional compatibility issues between mobile and desktop without</p>
 
 
-			<p>Link to the nightly survey, sent out daily, after participants complete the checkout process:</p>
 
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLSceBhi4F2dCNGVDoYTFt3ZZkASaG8F3z9CaRXAQPRUxLjq0Tg/viewform">Daily Survey</a>
+			<hr>
 
-			<h3>Analysis process</h3>
+			<h3>Daily Survey</h3>
+			<p>After the participants completed the checkout process, they would fill out a quick survey of their experience: <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSceBhi4F2dCNGVDoYTFt3ZZkASaG8F3z9CaRXAQPRUxLjq0Tg/viewform">Daily Survey [Google Forms]</a></strong></p>
+
+			<hr>
+
+			<h2>Analysis process</h2>
 
 			<p>With 20 participants, pre and post interviews, as well as the daily survey response feedback, we had tons and tons of data to sift through. The post interviews are where most of the meat came from, and we embarked on another large affinity diagram process, across tracks and days.</p>
 
 
 
-			<!-- [affinity video here] -->
-		<span class="image fit" style="margin-bottom: 0px;"><img src="images/w24_diary_schedule.png" alt="" /></span>
+				<!-- [affinity video here] -->
+			<span class="image fit" style="margin-bottom: 0px;">
+			<video width="100%" controls  >
+		  	<source src="images/w26_diary_affinity_timelapse_small.mp4" type="video/mp4">
+		  	Your browser does not support HTML5 video.
+			</video>
+
+			</span>
 
 
 
 			<p>We also have aggregated graphs of each track and their comfort levels per day. There are definitely some interesting insights here that we’re still analyzing.</p>
 
 
-			<!-- [ 4 graphs here] -->
-		<span class="image fit" style="margin-bottom: 0px;"><img src="images/w24_diary_schedule.png" alt="" /></span>
+				<!-- [ 4 graphs here] -->
+			<span class="image fit" style="margin-bottom: 0px;"><img src="images/journey_grid_consolidated_results_4up.jpg" alt="" /></span>
 
 
 
 			<p>Overall, this was a great last sprint to end on and an educational experience from a research side. We learned tons about asking the right questions at the right time, setting up the right number</p>
-
-
-
-
-		<span class="image fit" style="margin-bottom: 0px;"><img src="images/w24_diary_schedule.png" alt="" /></span>
-
-
-
-
-
-
-
-
 
 
 
