--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<title>Team Mastercard - Home</title>
+		<title>Team HamsterBard - Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -72,14 +72,14 @@
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle mc" style="    color: #f79f1a !important; background-color: #0000002b;">Read More
 									<i class="fa fa-arrow-down"></i>
-									</a></li> 
+									</a></li>
 							</ul>
 						</div>
 
 						<div class="image" style="opacity: 0.9; overflow: hidden; background-color: black;">
 
 							<!-- Swiper Silder
-    ================================================== --> 
+    ================================================== -->
 <!-- Slider main container -->
 <div class="swiper-container main-slider" id="myCarousel">
   <div class="swiper-wrapper">
