--- a/index.html
+++ b/index.html
@@ -111,6 +111,19 @@
 
 							<br><br><br>
 
+
+              <header ><h2><b>Continuous Authentication</b></h2><br><h3><b>Guidelines for Mastercard</b></h3></header>
+
+
+              <header><h2><b>The Five W's of Continuous Authentication</b></h2></header>
+
+              <h3>Who</h3>
+        			<p>Continuous authentication is a large topic than involves many different stakeholders, but in a variety of ways. Authentication has many uses and touch points and shows itself in different ways to these parties. </p>
+
+              <h3>What</h3>
+        			<p>We define Continuous Authentication as "a system that verifies who you are, whenever you need it, without you thinking about it." Behind this idea is a large technology piece pushing authentication beyond usernames, card numbers, and passwords. Instead of using two-factor authentication, Continuous Authentication uses machine learning and massive amounts of data, to notice patterns in card use in aggregate as well as behaviors unique to individuals. </p>
+
+
 							<header><h2><b>Current challenges in payment</b></h2></header>
 							<br><br>
 							<img src="images/ecosystem.png" style="width:60%;" class="center-align-images" style="" alt="" />
