--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/custom.css" />
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 	</head>
 
@@ -132,8 +133,8 @@
     					<h3 id="header-why">Why</h3>
     					<p><b>Consumers</b> - While consumers want to be safe, security is often something that takes a backseat to convenience. Continuous authentication has a two-fold benefit for cardholders, the potential for a quicker checkout, while also more layers of protection against identity theft, and fraud.</p>
 
-              <a href="#" onclick="toggle_visibility('5w_cons');"><b>Consumers</b></a>
-              <div id="5w_cons"><p> While consumers want to be safe, security is often something that takes a backseat to convenience. Continuous authentication has a two-fold benefit for cardholders, the potential for a quicker checkout, while also more layers of protection against identity theft, and fraud.</p></div>
+              <a href="javascript:unhide('5w_cons');"><b>Consumers</b></a>
+              <div id="5w_cons" class="hidden"><p> While consumers want to be safe, security is often something that takes a backseat to convenience. Continuous authentication has a two-fold benefit for cardholders, the potential for a quicker checkout, while also more layers of protection against identity theft, and fraud.</p></div>
 
 
 
@@ -306,15 +307,12 @@
 
       <!-- Added by Zohaib... -->
       <script type="text/javascript">
-
-        function toggle_visibility(id) {
-           var e = document.getElementById(id);
-           if(e.style.display == 'block')
-              e.style.display = 'none';
-           else
-              e.style.display = 'block';
+          function unhide(divID) {
+            var item = document.getElementById(divID);
+            if (item) {
+              item.className=(item.className=='hidden')?'unhidden':'hidden';
+          }
         }
-
       </script>
 
 
