--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
 
               <header ><h2><b>Continuous Authentication</b></h2><br></header>
 
+              <video  controls  class="center-align-images" style="width: 100%;">
+                <source src="https://www.hamsterbard.com/images/Draft_v2.mp4" type="video/mp4">
+                <source src="https://www.hamsterbard.com/images/Draft_v2.mp4" type="video/ogg">
+                Your browser does not support HTML5 video.
+              </video>
 
               <header ><h2><b style="font-weight: 600;" class="mc"><a href="https://aroonm.github.io/MCUXG/index.html">Final Deliverable: Guidelines for Mastercard</a></b></h2></header>
 
@@ -126,7 +131,7 @@
               <p>From device and location information, to biometrics and behaviours, as well as trends across all users, Continuous Authentication uses on the order of 40 or 50 factors instead of merely one, two, or three. Instead of a binary (logged in, logged out) paradigm, authentication becomes a gradient, and individuals get a 'trust score' instead of merely being logged in. This 'trust score' is variable based on the cardholders behaviour and patterns at any given time, and can be polled by a merchant at checkout. Overall Continuous Authentication is a new, more robust alternative to the traditional username and password model, that can make the checkout experience faster as well as much more secure.</p>
 
               <h3>When</h3>
-              <p>One of the key benefits of Continuous Authentication is the continuous aspect of it. This however seems to make it difficult to understand for many users because it is so different from a typical password authentication. Because the system is always monitoring a variety f data sources, it provides a "trust score" at any given time based on the combination of all those factors. For the end user, it means they can be authenticated in the moment, whenever they need it. </p>
+              <p>One of the key benefits of Continuous Authentication is the continuous aspect of it. This however seems to make it difficult to understand for many users because it is so different from a typical password authentication. Because the system is always monitoring a variety of data sources, it provides a "trust score" at any given time based on the combination of all those factors. For the end user, it means they can be authenticated in the moment, whenever they need it. </p>
 
               <p>From a product standpoint, it is harder to say where the data aspects of Continuous Authentication happen. The data pathways and storage components are still open questions. The data itself is likely to be stored by Mastercard with merchants pulling a trust score and possibly other data from an API at time of purchase. However, a technical sequence of exact events will likely vary by the product and implementation.
               </p>
