--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<section  class="spotlight style1 orient-center content-align-left image-position-right" style="height: 100%; overflow: hidden;">
 						<div class="content" >
 
-              <header ><h2><b>Continuous Authentication</b></h2><br></header>
+              <header ><h2><b>What is Continuous Authentication?</b></h2><br></header>
 
               <video  controls  class="center-align-images" style="width: 100%;">
                 <source src="https://www.hamsterbard.com/images/Draft_v2.mp4" type="video/mp4">
@@ -116,6 +116,7 @@
                 Your browser does not support HTML5 video.
               </video>
 
+              <br><br>
               <header ><h2><b style="font-weight: 600;" class="mc"><a href="https://aroonm.github.io/MCUXG/index.html">Final Deliverable: Guidelines for Mastercard</a></b></h2></header>
 
 
