--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+	<link rel="stylesheet" href="assets/css/main_home.css" />
+
 </head>
 
 <style type="text/css">
@@ -119,7 +121,7 @@
               </video>
 
               <br><br>
-              <h2><b style="font-weight: 600;" class="mc"><a href="https://aroonm.github.io/MCUXG/index.html"><button>Final Deliverable: Guidelines for Mastercard</button></a></b></h2>
+              <h2><b style="font-weight: 600;" class="mc"><a href="https://aroonm.github.io/MCUXG/index.html"><button class="bigbigbutton">Final Deliverable: Guidelines for Mastercard</button></a></b></h2>
 
 
               <br><br>
