Updated Heading on home page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<!-- MC Splash -->
 					<section class="banner style5 orient-left content-align-left image-position-right fullscreen ">
 						<div class="content" style="width: 60rem;">
-							<h1 ><b style="font-weight: 600;" class="mc">Design for Continuous Authentication</b></h1>
+							<h1 ><b style="font-weight: 600;" class="mc">Designing for <br />Continuous Authentication</b></h1>
 							<p class="major " style="color:white;"><a href="https://www.hcii.cmu.edu/" style="text-decoration: none;">CMU MHCI</a> capstone project sponsored by Mastercard</p>
 							<p class="major"  style="color:white; margin-top: -20px;"><b style="color: white;">Year of 2018</b></p>
 							<ul class="actions vertical">
@@ -129,7 +129,7 @@
 
 							<h3>Who</h3>
 							<div class="imgbox"><img class="indeximg" src="images/stakeholder.png"></div>
-							
+
 
         			<p>Continuous authentication is a large topic than involves many different stakeholders, but in a variety of ways. Authentication has many uses and touch points and shows itself in different ways to these parties. </p>
 
@@ -187,7 +187,7 @@
 
 
 
-						
+
 
 				<ul class="actions vertical align-center">
 					<li>
